--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_height="match_parent"
     android:layout_width="match_parent"
@@ -32,7 +33,8 @@
         android:layout_height="wrap_content"
         android:layout_below="@+id/StartStopButton"
         android:layout_centerHorizontal="true"
-        android:layout_margin="5dp" >
+        android:layout_margin="5dp"
+        android:id="@+id/Relative_Layout2">
 
         <TextView
             android:id="@+id/TextView1"
@@ -85,6 +87,12 @@
 
     </RelativeLayout>
 
+    <com.example.telemetry_traces.CustomView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/Relative_Layout2"
+        android:layout_centerHorizontal="true">
 
+    </com.example.telemetry_traces.CustomView>
 
 </RelativeLayout>
